update index file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello world, bye world!
+<!doctype html>
+<html>
+    <head>
+        <title>Test GITHub page</title>
+    </head>
+    <body>
+            <h1> Hello world</h1>
+    </body>
+</html>
