--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
             <h1> Hello world</h1>
 			<p> This is a paragraph </p>
 			<p> This is a bigger paragraph. This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.</p>
+			
+			<p> This is a new paragraph </p>
     </body>
 </html>
