--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello world, bye world!
+<!doctype html>
+<html>
+    <head>
+        <title>Test GITHub page</title>
+    </head>
+	<style>
+		p{
+		background-color: blue;
+		
+		}
+	</style>
+    <body>
+            <h1> Hello world</h1>
+			<p> This is a paragraph </p>
+			<p> This is a bigger paragraph. This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.This is a bigger paragraph.</p>
+    </body>
+</html>
