--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="header-wrap">
 		<div class="main-logo">
 			<a href="#">
-				<img src="images/main-logo.png" alt="logo">
+				<!-- <img src="#" alt="logo"> -->
 			</a>
 		</div><!--main-logo-->
 
@@ -46,7 +46,7 @@
 					<li class="menu-item"><a href="#testimonial" class="nav-link" data-effect="Testimonial">Testimonial</a></li>
 					<li class="menu-item"><a href="#latest-blog" class="nav-link" data-effect="Blog">Blog</a></li>
 					<li class="menu-item"><a href="#contact" class="nav-link" data-effect="Contact">Contact</a></li>
-					<li class="menu-item"><a href="https://templatesjungle.gumroad.com/l/lucas-creative-portfolio-html-template" class="nav-link" data-effect="Contact"> <b> GET PRO </b> </a></li>
+					
 				</ul>
 
 				<div class="menu-icon">
@@ -65,17 +65,17 @@
 </header>
 
 <div id="billboard">
-	<img src="images/main-banner.jpg" alt="post" class="banner-image">
+	<img src="images/main-banner.jpg" alt="post" class="banner-image" width="1920" height="645">
 	<div class="banner-content">
 
 		<div class="banner-header">
-			<h1>Hello, I’m <span class="colored">Lucas Alves</span></h1>
-			<p>Graphic Designer & Ceo of Graphic Type. I love to provide quality works.</p>
+			<h1>Hello, I’m <span class="colored">Priyabrata Das</span></h1>
+			<p>Teacher, BackEnd Developer. Help Clients in building dynamic and scalable websites usign Laravel, PHP and MySQL.</p>
 			<div class="btn-wrap">
 				<a href="#" class="btn-outline-orange btn-pill">Get in touch</a>
 			</div>
 		</div><!--banner-header-->
-		<div class="socila-links">
+		<div class="social-links">
 			<ul>
 				<li><a href="#"><i class="icon icon-facebook"></i></a></li>
 				<li><a href="#"><i class="icon icon-twitter"></i></a></li>
@@ -83,7 +83,7 @@
 				<li><a href="#"><i class="icon icon-youtube-play"></i></a></li>
 				<li><a href="#"><i class="icon icon-pinterest-p"></i></a></li>
 			</ul>
-		</div><!--socila-links-->
+		</div><!--social-links-->
 
 	</div>
 </div><!--billboard-->
