--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href=""> -->
     <link rel="stylesheet" href="styles/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
@@ -111,7 +114,9 @@
                       <li class="list-unstyled">DataTables</li>
                     </ul>
                   </div>
-                  <a href="" class="btn btn-primary">View Website</a>
+                  <a href="https://cabzone.in" class="btn btn-primary"
+                    >View Website</a
+                  >
                 </div>
               </div>
             </div>
