update anchor tags target attribute

--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
                       <li class="list-unstyled">DataTables</li>
                     </ul>
                   </div>
-                  <a href="https://cabzone.in" class="btn btn-primary"
+                  <a
+                    href="https://cabzone.in"
+                    class="btn btn-primary"
+                    target="_blank"
                     >View Website</a
                   >
                 </div>
@@ -158,7 +161,10 @@
                       <li class="list-unstyled">MVC</li>
                     </ul>
                   </div>
-                  <a href="https://bvec.ac.in" class="btn btn-primary"
+                  <a
+                    href="https://bvec.ac.in"
+                    class="btn btn-primary"
+                    target="_blank"
                     >View Website</a
                   >
                 </div>
@@ -198,7 +204,10 @@
                       <li class="list-unstyled">MySQL</li>
                     </ul>
                   </div>
-                  <a href="https://silcharpoltechnic.in" class="btn btn-primary"
+                  <a
+                    href="https://silcharpoltechnic.in"
+                    class="btn btn-primary"
+                    target="_blank"
                     >View Website</a
                   >
                 </div>
@@ -245,7 +254,9 @@
                       <li class="list-unstyled">RESTful API</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-primary">View in GitHub</a>
+                  <a href="#" class="btn btn-primary" target="_blank"
+                    >View in GitHub</a
+                  >
                 </div>
               </div>
             </div>
@@ -288,7 +299,9 @@
                       <li class="list-unstyled">RESTful API</li>
                     </ul>
                   </div>
-                  <a href="" class="btn btn-primary">View Website</a>
+                  <a href="#" class="btn btn-primary" target="_blank"
+                    >View Website</a
+                  >
                 </div>
               </div>
             </div>
@@ -327,7 +340,9 @@
                       <li class="list-unstyled">RESTful API</li>
                     </ul>
                   </div>
-                  <a href="#" class="btn btn-primary">View in GitHub</a>
+                  <a href="#" class="btn btn-primary" target="_blank"
+                    >View in GitHub</a
+                  >
                 </div>
               </div>
             </div>
