modify silpo link

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     </ul>
                   </div>
                   <a
-                    href="https://silcharpoltechnic.in"
+                    href="https://silcharpolytechnic.in"
                     class="btn btn-primary"
                     target="_blank"
                     >View Website</a
